<resources>
    <string name="ok">"D'acord"</string>
    <string name="admin_pem_title">"Permisos d'administrador"</string>
    <string name="admin_pem_info">"Aquesta aplicació requereix de permisos d'administrador a tots els dispositius excepte el del tutor. \n\n Aquests permisos permeten: \n\n  • Bloquejar el dispositiu. \n\n  • Evitar que l'aplicació es desinstali sense permís"</string>
    <string name="admin_pem_intent">"Donar permisos d'administrador a aquesta aplicació permet el següent:"</string>
    <string name="accessibility_pem_title">"Permisos d'accessibilitat"</string>
    <string name="accessibility_pem_info">"Aquesta aplicació requereix de permisos d'accessibilitat a tots els dispositius excepte el del tutor. \n\n Aquests permisos permeten: \n\n  • Bloquejar aplicacions. \n\n  • Detectar activitat al moment."</string>
    <string name="appusage_pem_title">"Permisos d'ús de dades"</string>
    <string name="appusage_pem_info">"Aquesta aplicació requereix de permisos d'ús de dades a tots els dispositius excepte el del tutor. \n\n Aquests permisos permeten: \n\n  • Extreure informació de les aplicacions."</string>
    <string name="device_admin">AdicTIC Device Admin</string>
    <string name="device_admin_description">"AdicTIC necessita permissos d'administrador per evitar que es desinstal·li l'aplicació, i poder bloquejar el dispositiu quan es requereixi."</string>
    <string name="app_name">AdicTIC</string>
    <string name="last_time_used">"Oberta últim cop: "</string>
    <string name="time_span">"Temps d'ús: "</string>
    <string name="lastXDays">"Veure activitat dels últims: "</string>
    <string name="alfabeticament">"Alfabèticament"</string>
    <string name="display_order_text">Ordenat per:</string>
    <string name="total_use">Temps total: </string>
    <string name="days">" dies "</string>
    <string name="hours">" hores "</string>
    <string name="minutes">" minuts"</string>
    <string name="days_tag">"d "</string>
    <string name="hours_tag">"h "</string>
    <string name="minutes_tag">"m"</string>
    <string name="block_app">Bloquejada</string>
    <string name="block_warning">Aquesta aplicació està bloquejada</string>
    <string name="sortir">Sortir</string>
    <string name="username">Nom d\'usuari:</string>
    <string name="password">Contrasenya:</string>
    <string name="password2">Repeteix la contrasenya:</string>
    <string name="email">Correu electrònic:</string>
    <string name="hint_username">Nom d\'usuari</string>
    <string name="hint_password">Contrasenya</string>
    <string name="hint_email">Correu electrònic</string>
    <string name="no_user">No tens usuari? </string>
    <string name="have_account">Ja tens compte? </string>
    <string name="register">Registra\'t </string>
    <string name="go_login">Inicia sessió</string>
    <string name="tipus">Aquest dispositiu és de:</string>
    <string name="tutor">Pare / Mare / Tutor</string>
    <string name="tutelat">Adolescent</string>
    <string name="login">Iniciar\nSessió</string>
    <string name="hint_nomDisp">Nom del dispositiu</string>
    <string name="title_activity_splash_screen">AdicTIC</string>
    <string name="good_register">Registre correcte!</string>
    <string name="error_noDeviceName">Camp del nom de dispositiu buit.</string>
    <string name="error_noTipus">Camp de tipus de dispositiu buit.</string>
    <string name="error_noValidEmail">Format de correu no vàlid.</string>
    <string name="error_noPwMatch">Les contrasenyes no són iguals.</string>
    <string name="error_noRegister">ERROR: No s\'ha pogut registrar.</string>
    <string name="error_noLogin">ERROR: No s\'ha trobat usuari al servidor amb les dades entrades.</string>
    <string name="error_noUsername">Escriu un nom d\'usuari.</string>
    <string name="error_password">Contrasenya no vàlida.</string>
    <string name="error_noData">"No s'ha pogut extreure informació del servidor"</string>
    <string name="the_image_of_the_other_app">The image of the other app.</string>
    <string name="current_names">Els noms que tens assignats fins ara són:</string>
    <string name="new_name_entry">"Entra el nom d'aquest dispositiu. Per substituir un anterior, entra el mateix nom."</string>
    <string name="accessibility_service_name">\"Adictic Accessibility Service\"</string>
    <string name="accessibility_service_description">\"Aquest servei s\'utilitza per bloquejar aplicacions\"</string>
    <string name="nomfill_enter">Entrar</string>
    <string name="emptyList">No hi ha informació</string>
    <string name="title_activity_nav">NavActivity</string>
    <string name="menu">MENÚ</string>
    <string name="menu_home">Inici</string>
    <string name="menu_settings">Configuració</string>
    <string name="menu_advice">Assessorament</string>
    <string name="menu_help">Ajuda</string>
    <string name="free_time">"Temps lliure"</string>
    <string name="stop_free_time">"Aturar temps lliure"</string>
    <string name="block_device">"Bloquejar dispositiu"</string>
    <string name="disconnected">"Desconnectat"</string>
    <string name="informe">Informe</string>
    <string name="horaris">"Horaris"</string>
    <string name="app_usage">Ús d\'aplicacions</string>
    <string name="block_apps">Bloqueig d\'aplicacions</string>
    <string name="home_second">Home Second</string>
    <string name="advice_infoContent">Contingut informatiu</string>
    <string name="advice_mostAskQuest">Preguntes freqüents</string>
    <string name="advice_recommendations">Recomanacions</string>
    <string name="advice_onlineChat">Chat online</string>
    <string name="advice_privateConsult">Consulta privada</string>
    <string name="advice_OurCenters">Els nostres centres</string>
    <string name="forgetPassword"><u>Has oblidat la contrasenya? </u></string>
    <string name="logout">Tancar Sessió</string>
    <string name="chip_single_date">"Una sola data"</string>
    <string name="chip_range_dates">"Entre dues dates"</string>
    <string name="date">"Data:"</string>
    <string name="initial_date">"Data inicial:"</string>
    <string name="final_date">"Data final:"</string>
    <string name="date_format">"%d  %s  %d"</string>
    <string name="daily_usage">"Ús diari del dispositiu"</string>
    <string name="device_usage">"Ús total del dispositiu:"</string>
    <string name="press_pie_chart">"Prem a la gràfica per saber més informació."</string>
    <string name="hours_minutes">"%d h. %d m."</string>
    <string name="hrs">"%d h."</string>
    <string name="hours_endl_minutes">"%d h.\n%d min."</string>
    <string name="mins">"%d min."</string>
    <string name="comp">"%s / %s"</string>
    <string name="percentage">"%d%%"</string>
    <string name="informal_date_format">"%d-%d-%d"</string>
    <string name="percentage_info">Aquest usuari ha utilitzat el dispositiu %s de les %s recomanades. Això vol dir que ha estat un %s%% del temps recomanat utilitzant-lo.</string>
    <string name="error_liveApp">"No s'ha pogut llegir l'aplicació actual del fill"</string>
    <string name="unblock_device">"Desbloquejar dispositiu"</string>
    <string name="nom_app">"Nom"</string>
    <string name="categoria_app">"Categoria"</string>
    <string name="editar_horari">"Editar horaris"</string>
    <string name="horari_generic">"Genèric"</string>
    <string name="horari_diari">"Diari"</string>
    <string name="horari_setmanal">"Setmanal"</string>
    <string name="horari_intro">"Escull les hores que el dispositiu estarà actiu:"</string>
    <string name="horari_actual">"El %s va a dormir a les %s\nEl %s es desperta a les %s"</string>
    <string name="error_no_event_name">"Escriu un nom per l'event"</string>
    <string name="error_no_event_days">"Escull quins dies passa aquest event"</string>
    <string name="error_incorrect_times">"Tria una hora final superior a la inicial"</string>
    <string name="error_no_fills">Actualment no hi ha cap fill/a registrat.\nPer a fer-ho només cal:\n\n1. Instal·lar l\'app AdicTIC al dispositiu mòbil del vostre/a fill/a.\n\n2. Iniciar sessió amb el mateix usuari i contrasenya però prement l\'opció \"adolescent\".\n\n3. Gaudir dels avantatges que us proporcionarà AdicTIC.</string>
    <string name="monday">Dilluns</string>
    <string name="tuesday">Dimarts</string>
    <string name="wednesday">Dimecres</string>
    <string name="thursday">Dijous</string>
    <string name="friday">Divendres</string>
    <string name="saturday">Dissabte</string>
    <string name="sunday">Diumenge</string>
    <string name="weekday">Entre setmana</string>
    <string name="weekend">Cap de setmana</string>
    <string name="wake_up">Despertar:</string>
    <string name="sleep">Adormir:</string>
    <string name="wake_up_hint">Hora de despertar</string>
    <string name="sleep_hint">"Hora de bloquejar"</string>
    <string name="accept">"Acceptar"</string>
    <string name="successful_entry">"S'ha guardat correctament!"</string>
    <string name="block_now">"Bloqueja"</string>
    <string name="set_limit">"Límit diari"</string>
    <string name="unlock">"Desbloqueja"</string>
    <string name="search_app_category">"Cerca per app/categoria"</string>
    <string name="per_day">"/dia"</string>
    <string name="other">"Altres"</string>
    <string name="app_icon">"Logo de l'app"</string>
    <string name="select_apps_lock">"Selecciona les aplicacions que vols bloquejar"</string>
    <string name="select_apps_unlock">"Selecciona les aplicacions que vols bloquejar"</string>
    <string name="free_use_activation">"Tens ús il·limitat d'aquest dispositiu"</string>
    <string name="free_use_deactivation">"S'ha acabat l'ús il·limitat d'aquest dispositiu"</string>
    <string name="update_blocked_apps">"S'ha actualitzat la llista d'apps bloquejades"</string>
    <string name="horaris_notification">"S'han actualitzat els horaris"</string>
    <string name="informe_graphs">"Gràfiques"</string>
    <string name="informe_resum">"Resum"</string>
    <string name="overused_apps">"Aplicacions massa utilitzades"</string>
    <string name="access_intents">"Intents d'accés"</string>
    <string name="access_intents_label">"Intents d'accés a aplicacions bloquejades"</string>
    <string name="que_es_addiccio">"Què és una addicció?"</string>
    <string name="def_noves_tecn">"De què parlem quan diem addicció a les noves tecnologies?"</string>
    <string name="causes_addiccio">"Quines són les causes de l'addicció a les noves tecnologies?"</string>
    <string name="consequencies_us">"Quines són les conseqüències d'un ús problemàtic de les noves tecnologies?"</string>
    <string name="prevenir_problemes">"Com prevenir els problemes relacionats amb les noves tecnologies?"</string>
    <string name="actuacio">"Com actuar davant del dubte de conducta problemàtica amb les noves tecnologies?"</string>
    <string name="tractament_addiccio">"Quin és el tractament de l'addicció a les noves tecnologies?"</string>
    <string name="riscos_noves_tec">"Quins són els riscos de les noves tecnologies?"</string>
    <string name="birthday">"Escull la data de naixement"</string>
    <string name="error_no_bday">"Falta la data de naixement"</string>
    <string name="esborrar">"Esborrar"</string>
    <string name="name_tag">"Nom:"</string>
    <string name="event_name">"Escriu el nom de l'event"</string>
    <string name="start_tag">"Inici:"</string>
    <string name="start_event_hint">"Hora d'inici"</string>
    <string name="end_tag">"Fi:"</string>
    <string name="end_event_hint">"Hora de fi"</string>
    <string name="tancar_sessio">Tancar sessió</string>
    <string name="change_language">Canviar idioma</string>
    <string name="change_theme">Canviar tema</string>
    <string name="changePassword">Canviar contrasenya</string>
</resources>