<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    app:key="preferenceParent">

    <ListPreference
        app:entries="@array/languages"
        app:entryValues="@array/language_alias"
        app:key="setting_change_language"
        app:icon="@drawable/ic_language_change"
        app:title="@string/change_language" />

    <Preference
        app:key="setting_change_password"
        app:icon="@drawable/ic_change_password"
        app:title="@string/changePassword" />

    <Preference
        app:key="setting_notifications"
        app:icon="@drawable/ic_baseline_notifications_24"
        app:title="@string/setting_notifications" />

    <Preference
        app:key="setting_tancar_sessio"
        app:icon="@drawable/ic_close_session"
        app:title="@string/tancar_sessio" />

    <PreferenceCategory
        app:key="ppdebug"
        app:title="Debug">

        <ListPreference
            app:entries="@array/themes"
            app:entryValues="@array/themes_alias"
            app:key="setting_change_theme"
            app:title="@string/change_theme" />

    </PreferenceCategory>

</PreferenceScreen>