<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:startDestination="@+id/nav_mainParent">

    <fragment
        android:id="@+id/nav_advice"
        android:name="com.example.adictic.ui.support.AdviceFragment"
        android:label="@string/menu_advice"
        tools:layout="@layout/fragment_advice" />
    <fragment
        android:id="@+id/nav_settings"
        android:name="com.example.adictic.ui.main.SettingsFragment"
        android:label="@string/menu_settings" />
    <fragment
        android:id="@+id/nav_mainParent"
        android:name="com.example.adictic.ui.main.HomeParentFragment"
        android:label="@string/menu_home" />
</navigation>