<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    app:key="preferenceChild">

    <ListPreference
        app:entries="@array/languages"
        app:entryValues="@array/language_alias"
        app:key="setting_change_language"
        app:icon="@drawable/ic_language_change"
        app:title="@string/change_language" />

    <PreferenceCategory
        app:key="pcdebug"
        app:title="Debug">

        <ListPreference
            app:entries="@array/themes"
            app:entryValues="@array/themes_alias"
            app:key="setting_change_theme"
            app:title="@string/change_theme" />

        <Preference
            app:key="setting_pujar_informe"
            app:title="Pujar informe" />

        <Preference
            app:key="setting_tancar_sessio"
            app:title="@string/tancar_sessio" />
    </PreferenceCategory>

</PreferenceScreen>