<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true">

    <Button
        android:id="@+id/BT_QueEsAddiccio"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="24dp"
        android:backgroundTint="@color/background_activity"
        android:text="@string/que_es_addiccio"
        android:textAlignment="textStart"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/BT_defNovesTec"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/background_activity"
        android:text="@string/def_noves_tecn"
        android:textAlignment="textStart"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="@+id/BT_QueEsAddiccio"
        app:layout_constraintStart_toStartOf="@+id/BT_QueEsAddiccio"
        app:layout_constraintTop_toBottomOf="@+id/BT_QueEsAddiccio" />

    <Button
        android:id="@+id/BT_causesAddiccio"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/background_activity"
        android:text="@string/causes_addiccio"
        android:textAlignment="textStart"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="@+id/BT_QueEsAddiccio"
        app:layout_constraintStart_toStartOf="@+id/BT_QueEsAddiccio"
        app:layout_constraintTop_toBottomOf="@+id/BT_defNovesTec" />

    <Button
        android:id="@+id/BT_consequencies_us"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/background_activity"
        android:text="@string/consequencies_us"
        android:textAlignment="textStart"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="@+id/BT_QueEsAddiccio"
        app:layout_constraintStart_toStartOf="@+id/BT_QueEsAddiccio"
        app:layout_constraintTop_toBottomOf="@+id/BT_causesAddiccio" />

    <Button
        android:id="@+id/BT_prevenir_problemes"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/background_activity"
        android:text="@string/prevenir_problemes"
        android:textAlignment="textStart"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="@+id/BT_QueEsAddiccio"
        app:layout_constraintStart_toStartOf="@+id/BT_QueEsAddiccio"
        app:layout_constraintTop_toBottomOf="@+id/BT_consequencies_us" />

    <Button
        android:id="@+id/BT_actuacio"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/background_activity"
        android:text="@string/actuacio"
        android:textAlignment="textStart"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="@+id/BT_QueEsAddiccio"
        app:layout_constraintStart_toStartOf="@+id/BT_QueEsAddiccio"
        app:layout_constraintTop_toBottomOf="@+id/BT_prevenir_problemes" />

    <Button
        android:id="@+id/BT_tractament_addiccio"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/background_activity"
        android:text="@string/tractament_addiccio"
        android:textAlignment="textStart"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="@+id/BT_QueEsAddiccio"
        app:layout_constraintStart_toStartOf="@+id/BT_QueEsAddiccio"
        app:layout_constraintTop_toBottomOf="@+id/BT_actuacio" />

    <Button
        android:id="@+id/BT_riscos_noves_tec"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/background_activity"
        android:text="@string/riscos_noves_tec"
        android:textAlignment="textStart"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="@+id/BT_QueEsAddiccio"
        app:layout_constraintStart_toStartOf="@+id/BT_QueEsAddiccio"
        app:layout_constraintTop_toBottomOf="@+id/BT_tractament_addiccio" />

</androidx.constraintlayout.widget.ConstraintLayout>